--- a/paper/references.bib
+++ b/paper/references.bib
@@ -577,3 +577,14 @@
   year={2017},
   publisher={Nature Publishing Group}
 }
+
+@article{karollus2023legnet,
+  title={Species-aware DNA language models capture regulatory elements and their evolution},
+  author={Karollus, Alexander and Maier, Thomas and Zimmermann, Micha and Boros, Dustin and Schubach, Max and Nieselt, Kay and Ohler, Uwe},
+  journal={Genome Biology},
+  volume={24},
+  number={1},
+  pages={1--20},
+  year={2023},
+  publisher={BioMed Central}
+}
